CICD and AWS Cloud Deployment related changes